Fixed carousel images on mobile

--- a/style.css
+++ b/style.css
@@ -23,8 +23,14 @@ html, body
 
 .carousel-inner img
 {
-    height: 100%;
-    width: 100%;
+    height: 1080px;
+    width: 1920px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    /* width: 100%;
+    height: 75%;  */
+
 }
 .carousel-caption
 {
